fix image being display with wrong width

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -512,7 +512,7 @@ tbody tr:last-of-type {
 
 .image-org {
   height: 10rem;
-  width: fit-content;
+  width: max-content;
   margin: 0 1rem;
 }
 
